<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/purple_700">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.crazymath.view.widget.CrazyTextView
            android:id="@+id/tv_score"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_score_0"
            android:textColor="@color/white"
            android:textSize="30sp" />
        <com.example.crazymath.view.widget.CrazyTextView
            android:id="@+id/tv_best"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_best_17"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </TableRow>

    <com.example.crazymath.view.widget.CrazyTextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_10"
        android:gravity="center"
        android:textColor="@color/colorYellow"
        android:textSize="50sp" />

    <com.example.crazymath.view.widget.CrazyTextView
        android:id="@+id/tv_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_3_5"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="100sp" />

    <FrameLayout
        android:layout_marginHorizontal="50dp"
        android:padding="5dp"
        android:background="@color/colorRedAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.crazymath.view.widget.CrazyTextView
            android:background="@color/colorRed"
            android:id="@+id/tv_answer_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_8"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:padding="5dp"
        android:background="@color/colorGreenAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.crazymath.view.widget.CrazyTextView
            android:background="@color/colorGreen"
            android:id="@+id/tv_answer_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_6"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:padding="5dp"
        android:background="@color/colorYellowDarkAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.crazymath.view.widget.CrazyTextView
            android:id="@+id/tv_answer_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorYellowDark"
            android:gravity="center"
            android:text="@string/txt_2"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </FrameLayout>

</LinearLayout>